# led-service2

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  build.rs  deploy.sh
.github/workflows/: build-rpi.yml
src/: config.rs  lib.rs  main.rs  service.rs  worker.rs
src/display/: emulator.rs  mod.rs  rpi.rs
