[package]
name = "led-service2"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "led-server"
path = "src/main.rs"

[[bin]]
name = "led-client"
path = "src/bin/client.rs"

[features]
default = ["emulator"]
rpi = ["dep:rpi-led-panel"]
emulator = ["dep:minifb"]

[dependencies]
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
tokio = { version = "1", features = ["full"] }
image = { version = "0.25", default-features = false, features = ["png", "pnm", "gif", "jpeg"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
humantime = "2"

rpi-led-panel = { version = "0.8", optional = true }
minifb = { version = "0.27", optional = true }
rodio = { version = "0.22", default-features = false, features = ["wav", "playback"] }

[build-dependencies]
tonic-build = "0.12"
